--- a/pixelgram-yt-main/package.json
+++ b/pixelgram-yt-main/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.8",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -28,12 +30,15 @@
     "@uploadthing/react": "^6.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.9.2",
+    "latest": "^0.2.0",
     "lucide-react": "^0.293.0",
-    "next": "^14.1.4",
+    "next": "^14.2.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
     "react-timeago": "^7.2.0",
     "sonner": "^1.2.3",
@@ -49,10 +54,10 @@
     "@types/react-timeago": "^4.1.6",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "^14.1.4",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8",
-    "prisma": "^5.6.0",
-    "tailwindcss": "^3.3.0",
+    "prisma": "^5.13.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
