--- a/pixelgram-yt-main/package.json
+++ b/pixelgram-yt-main/package.json
@@ -10,7 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.6.0",
+    "@auth/prisma-adapter": "^1.0.8",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.2",
@@ -37,7 +37,7 @@
     "latest": "^0.2.0",
     "lucide-react": "^0.293.0",
     "next": "^14.2.3",
-    "next-auth": "^5.0.0-beta.17",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
