--- a/pixelgram-yt-main/package.json
+++ b/pixelgram-yt-main/package.json
@@ -10,11 +10,11 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.8",
+    "@auth/prisma-adapter": "^1.6.0",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.18.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -36,11 +36,12 @@
     "emoji-picker-react": "^4.9.2",
     "latest": "^0.2.0",
     "lucide-react": "^0.293.0",
-    "next": "^14.2.3",
-    "next-auth": "^4.24.5",
+    "next": "^14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-icons": "^5.2.0",
     "react-spinner": "^0.2.7",
@@ -50,6 +51,7 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.0.3",
+    "use-debounce": "^10.0.2",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
@@ -58,11 +60,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-dropzone": "^4.2.2",
     "@types/react-timeago": "^4.1.6",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "^14.2.3",
+    "eslint-config-next": "^14.2.5",
     "postcss": "^8",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.4.3",
